const { MigrationInterface, QueryRunner } = require("typeorm");

module.exports = class migrations1743525953221 {
    name = 'migrations1743525953221'

    async up(queryRunner) {
        await queryRunner.query(`ALTER TABLE "group" DROP CONSTRAINT "group_type_id_fkey"`);
        await queryRunner.query(`ALTER TABLE "expense" DROP CONSTRAINT "expense_category_id_fkey"`);
        await queryRunner.query(`ALTER TABLE "expense" DROP CONSTRAINT "expense_group_id_fkey"`);
        await queryRunner.query(`ALTER TABLE "expense" DROP CONSTRAINT "expense_sub_category_id_fkey"`);
        await queryRunner.query(`ALTER TABLE "expense" DROP CONSTRAINT "expense_user_id_fkey"`);
        await queryRunner.query(`ALTER TABLE "sub_category" DROP CONSTRAINT "sub_category_category_id_fkey"`);
        await queryRunner.query(`ALTER TABLE "user_groups" DROP CONSTRAINT "user_groups_group_id_fkey"`);
        await queryRunner.query(`ALTER TABLE "user_groups" DROP CONSTRAINT "user_groups_user_id_fkey"`);
        await queryRunner.query(`DROP INDEX "auth"."email_change_token_current_idx"`);
        await queryRunner.query(`DROP INDEX "auth"."email_change_token_new_idx"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP CONSTRAINT "users_email_change_confirm_status_check"`);
        await queryRunner.query(`CREATE TABLE "payment_settlement_entity" ("created_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "updated_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "id" uuid NOT NULL DEFAULT uuid_generate_v4(), "payerId" uuid NOT NULL, "payeeId" uuid NOT NULL, "groupId" uuid, "amount" numeric(10,2) NOT NULL, "currency" character varying NOT NULL, "paymentMethod" character varying NOT NULL DEFAULT 'other', "referenceNumber" character varying, "description" character varying, "paymentDate" TIMESTAMP NOT NULL, "exchangeRate" numeric(10,6) NOT NULL DEFAULT '1', CONSTRAINT "PK_79847ede7452f22016b0097422f" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "payment_split_settlement_entity" ("created_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "updated_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "id" uuid NOT NULL DEFAULT uuid_generate_v4(), "paymentSettlementId" uuid NOT NULL, "expenseSplitId" uuid NOT NULL, "amount" numeric(10,2) NOT NULL, CONSTRAINT "PK_d12010f88cf9a9d21ce22b21205" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TYPE "public"."expense_split_entity_splittype_enum" AS ENUM('equal', 'custom', 'percentage')`);
        await queryRunner.query(`CREATE TYPE "public"."expense_split_entity_settlementstatus_enum" AS ENUM('unsettled', 'partial', 'complete')`);
        await queryRunner.query(`CREATE TABLE "expense_split_entity" ("created_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "updated_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "id" uuid NOT NULL DEFAULT uuid_generate_v4(), "expenseId" uuid NOT NULL, "userId" uuid NOT NULL, "amount" numeric(10,2) NOT NULL, "percentage" numeric(5,2), "splitType" "public"."expense_split_entity_splittype_enum" NOT NULL DEFAULT 'equal', "settledAmount" numeric(10,2) NOT NULL DEFAULT '0', "settlementStatus" "public"."expense_split_entity_settlementstatus_enum" NOT NULL DEFAULT 'unsettled', CONSTRAINT "PK_82a7a8ee4536b5201d00cefee67" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "group_expense_participant_entity" ("created_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "updated_at" TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(), "id" uuid NOT NULL DEFAULT uuid_generate_v4(), "groupId" uuid NOT NULL, "expenseSplitId" uuid NOT NULL, CONSTRAINT "UQ_a4cc4036e1b4c67e691b1eae2f5" UNIQUE ("groupId", "expenseSplitId"), CONSTRAINT "PK_6d5eb864287192d8d37b6df1550" PRIMARY KEY ("id"))`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "invited_at"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "confirmation_sent_at"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "recovery_sent_at"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "email_change_token_new"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "email_change"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "email_change_sent_at"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "phone_change"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "phone_change_token"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "phone_change_sent_at"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "email_change_token_current"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "reauthentication_sent_at"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "id" SET DEFAULT uuid_generate_v4()`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "is_super_admin" SET DEFAULT false`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "created_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "updated_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP CONSTRAINT "users_phone_key"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "phone" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "confirmed_at"`);
        await queryRunner.query(`DELETE FROM "public"."typeorm_metadata" WHERE "type" = $1 AND "name" = $2 AND "database" = $3 AND "schema" = $4 AND "table" = $5`, ["GENERATED_COLUMN","confirmed_at","postgres","auth","users"]);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "confirmed_at" TIMESTAMP WITH TIME ZONE GENERATED ALWAYS AS (LEAST(email_confirmed_at, phone_confirmed_at)) STORED`);
        await queryRunner.query(`INSERT INTO "public"."typeorm_metadata"("database", "schema", "table", "type", "name", "value") VALUES ($1, $2, $3, $4, $5, $6)`, ["postgres","auth","users","GENERATED_COLUMN","confirmed_at","LEAST(email_confirmed_at, phone_confirmed_at)"]);
        await queryRunner.query(`COMMENT ON COLUMN "auth"."users"."is_sso_user" IS NULL`);
        await queryRunner.query(`ALTER TABLE "group_types" DROP CONSTRAINT "group_types_group_type_name_key"`);
        await queryRunner.query(`ALTER TABLE "group" DROP COLUMN "name"`);
        await queryRunner.query(`ALTER TABLE "group" ADD "name" character varying NOT NULL`);
        await queryRunner.query(`ALTER TABLE "group" ALTER COLUMN "type_id" DROP NOT NULL`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "user_id" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "expense" DROP COLUMN "description"`);
        await queryRunner.query(`ALTER TABLE "expense" ADD "description" character varying NOT NULL`);
        await queryRunner.query(`ALTER TABLE "expense" DROP COLUMN "currency"`);
        await queryRunner.query(`ALTER TABLE "expense" ADD "currency" character varying(3) NOT NULL`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "category_id" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "sub_category_id" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "expense" DROP COLUMN "image_url"`);
        await queryRunner.query(`ALTER TABLE "expense" ADD "image_url" character varying`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "created_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "updated_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "id" SET DEFAULT uuid_generate_v4()`);
        await queryRunner.query(`ALTER TABLE "sub_category" DROP COLUMN "name"`);
        await queryRunner.query(`ALTER TABLE "sub_category" ADD "name" character varying NOT NULL`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "created_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "updated_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "category_id" DROP NOT NULL`);
        await queryRunner.query(`ALTER TABLE "sub_category" ADD CONSTRAINT "UQ_4ec8c495300259f2322760a39fa" UNIQUE ("category_id")`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "category_id" DROP DEFAULT`);
        await queryRunner.query(`COMMENT ON COLUMN "category"."id" IS NULL`);
        await queryRunner.query(`ALTER TABLE "category" DROP CONSTRAINT "category_10dd08f1-02e9-40fa-a483-a6a85b12a308_key"`);
        await queryRunner.query(`ALTER TABLE "category" DROP CONSTRAINT "category_Entertainment_key"`);
        await queryRunner.query(`ALTER TABLE "category" DROP COLUMN "name"`);
        await queryRunner.query(`ALTER TABLE "category" ADD "name" character varying NOT NULL`);
        await queryRunner.query(`ALTER TABLE "category" ALTER COLUMN "created_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "category" ALTER COLUMN "updated_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ALTER COLUMN "created_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ALTER COLUMN "updated_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP CONSTRAINT "conversion_rates_usd_pkey"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP CONSTRAINT "conversion_rates_usd_id_key"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP COLUMN "id"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD "id" SERIAL NOT NULL`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD CONSTRAINT "PK_059ebb3c0d5dcaca81711163d1f" PRIMARY KEY ("id")`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP CONSTRAINT "conversion_rates_usd_currency_key"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP COLUMN "currency"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD "currency" character varying(3) NOT NULL`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD CONSTRAINT "UQ_06835919888d1c1f3cad5ba1fe3" UNIQUE ("currency")`);
        await queryRunner.query(`ALTER TYPE "public"."group_role" RENAME TO "group_role_old"`);
        await queryRunner.query(`CREATE TYPE "public"."user_groups_role_enum" AS ENUM('admin', 'member')`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "role" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "role" TYPE "public"."user_groups_role_enum" USING "role"::"text"::"public"."user_groups_role_enum"`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "role" SET DEFAULT 'member'`);
        await queryRunner.query(`DROP TYPE "public"."group_role_old"`);
        await queryRunner.query(`ALTER TYPE "public"."user_group_status" RENAME TO "user_group_status_old"`);
        await queryRunner.query(`CREATE TYPE "public"."user_groups_status_enum" AS ENUM('pending', 'accepted', 'rejected')`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "status" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "status" TYPE "public"."user_groups_status_enum" USING "status"::"text"::"public"."user_groups_status_enum"`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "status" SET DEFAULT 'pending'`);
        await queryRunner.query(`DROP TYPE "public"."user_group_status_old"`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "joined_at" SET DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "user_id" DROP NOT NULL`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "user_id" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "group_id" DROP NOT NULL`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "group_id" DROP DEFAULT`);
        await queryRunner.query(`CREATE UNIQUE INDEX "users_phone_key" ON "auth"."users" ("phone") `);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD CONSTRAINT "CHK_dbe48b26d5c1f16ae0abc1eddb" CHECK ((email_change_confirm_status >= 0) AND (email_change_confirm_status <= 2))`);
        await queryRunner.query(`ALTER TABLE "group" ADD CONSTRAINT "FK_6a9ecd4f5f272c9a780c5ca8094" FOREIGN KEY ("type_id") REFERENCES "group_types"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "payment_settlement_entity" ADD CONSTRAINT "FK_52b72f62b689b8f453341e3e1c6" FOREIGN KEY ("payerId") REFERENCES "auth"."users"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "payment_settlement_entity" ADD CONSTRAINT "FK_a9a7ddc18c5ff77e57c106b9192" FOREIGN KEY ("payeeId") REFERENCES "auth"."users"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "payment_settlement_entity" ADD CONSTRAINT "FK_d56981cc5f9e0105d77531dbb60" FOREIGN KEY ("groupId") REFERENCES "group"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "payment_split_settlement_entity" ADD CONSTRAINT "FK_42bcbf07eb3d8da1d15252c83f3" FOREIGN KEY ("paymentSettlementId") REFERENCES "payment_settlement_entity"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "payment_split_settlement_entity" ADD CONSTRAINT "FK_26ce0c409f0fb4b5db4ea2a8298" FOREIGN KEY ("expenseSplitId") REFERENCES "expense_split_entity"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "expense_split_entity" ADD CONSTRAINT "FK_730221b794524406b73e0571005" FOREIGN KEY ("expenseId") REFERENCES "expense"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "expense_split_entity" ADD CONSTRAINT "FK_80fcb2e6bc91c1cfed6ded3133d" FOREIGN KEY ("userId") REFERENCES "auth"."users"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "sub_category" ADD CONSTRAINT "FK_4ec8c495300259f2322760a39fa" FOREIGN KEY ("category_id") REFERENCES "category"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "user_groups" ADD CONSTRAINT "FK_95bf94c61795df25a5154350102" FOREIGN KEY ("user_id") REFERENCES "auth"."users"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "user_groups" ADD CONSTRAINT "FK_4c5f2c23c34f3921fbad2cd3940" FOREIGN KEY ("group_id") REFERENCES "group"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "group_expense_participant_entity" ADD CONSTRAINT "FK_6315c7b7102bb7c7b419e5924fb" FOREIGN KEY ("groupId") REFERENCES "group"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "group_expense_participant_entity" ADD CONSTRAINT "FK_cb9ea6e76263e888f2d64748600" FOREIGN KEY ("expenseSplitId") REFERENCES "expense_split_entity"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
    }

    async down(queryRunner) {
        await queryRunner.query(`ALTER TABLE "group_expense_participant_entity" DROP CONSTRAINT "FK_cb9ea6e76263e888f2d64748600"`);
        await queryRunner.query(`ALTER TABLE "group_expense_participant_entity" DROP CONSTRAINT "FK_6315c7b7102bb7c7b419e5924fb"`);
        await queryRunner.query(`ALTER TABLE "user_groups" DROP CONSTRAINT "FK_4c5f2c23c34f3921fbad2cd3940"`);
        await queryRunner.query(`ALTER TABLE "user_groups" DROP CONSTRAINT "FK_95bf94c61795df25a5154350102"`);
        await queryRunner.query(`ALTER TABLE "sub_category" DROP CONSTRAINT "FK_4ec8c495300259f2322760a39fa"`);
        await queryRunner.query(`ALTER TABLE "expense_split_entity" DROP CONSTRAINT "FK_80fcb2e6bc91c1cfed6ded3133d"`);
        await queryRunner.query(`ALTER TABLE "expense_split_entity" DROP CONSTRAINT "FK_730221b794524406b73e0571005"`);
        await queryRunner.query(`ALTER TABLE "payment_split_settlement_entity" DROP CONSTRAINT "FK_26ce0c409f0fb4b5db4ea2a8298"`);
        await queryRunner.query(`ALTER TABLE "payment_split_settlement_entity" DROP CONSTRAINT "FK_42bcbf07eb3d8da1d15252c83f3"`);
        await queryRunner.query(`ALTER TABLE "payment_settlement_entity" DROP CONSTRAINT "FK_d56981cc5f9e0105d77531dbb60"`);
        await queryRunner.query(`ALTER TABLE "payment_settlement_entity" DROP CONSTRAINT "FK_a9a7ddc18c5ff77e57c106b9192"`);
        await queryRunner.query(`ALTER TABLE "payment_settlement_entity" DROP CONSTRAINT "FK_52b72f62b689b8f453341e3e1c6"`);
        await queryRunner.query(`ALTER TABLE "group" DROP CONSTRAINT "FK_6a9ecd4f5f272c9a780c5ca8094"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP CONSTRAINT "CHK_dbe48b26d5c1f16ae0abc1eddb"`);
        await queryRunner.query(`DROP INDEX "auth"."users_phone_key"`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "group_id" SET DEFAULT uuid_generate_v4()`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "group_id" SET NOT NULL`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "user_id" SET DEFAULT uuid_generate_v4()`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "user_id" SET NOT NULL`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "joined_at" SET DEFAULT (now() AT TIME ZONE 'utc'`);
        await queryRunner.query(`CREATE TYPE "public"."user_group_status_old" AS ENUM('pending', 'accepted', 'rejected')`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "status" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "status" TYPE "public"."user_group_status_old" USING "status"::"text"::"public"."user_group_status_old"`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "status" SET DEFAULT 'pending'`);
        await queryRunner.query(`DROP TYPE "public"."user_groups_status_enum"`);
        await queryRunner.query(`ALTER TYPE "public"."user_group_status_old" RENAME TO "user_group_status"`);
        await queryRunner.query(`CREATE TYPE "public"."group_role_old" AS ENUM('admin', 'member')`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "role" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "role" TYPE "public"."group_role_old" USING "role"::"text"::"public"."group_role_old"`);
        await queryRunner.query(`ALTER TABLE "user_groups" ALTER COLUMN "role" SET DEFAULT 'member'`);
        await queryRunner.query(`DROP TYPE "public"."user_groups_role_enum"`);
        await queryRunner.query(`ALTER TYPE "public"."group_role_old" RENAME TO "group_role"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP CONSTRAINT "UQ_06835919888d1c1f3cad5ba1fe3"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP COLUMN "currency"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD "currency" text NOT NULL`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD CONSTRAINT "conversion_rates_usd_currency_key" UNIQUE ("currency")`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP CONSTRAINT "PK_059ebb3c0d5dcaca81711163d1f"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" DROP COLUMN "id"`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD "id" bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD CONSTRAINT "conversion_rates_usd_id_key" UNIQUE ("id")`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ADD CONSTRAINT "conversion_rates_usd_pkey" PRIMARY KEY ("id")`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ALTER COLUMN "updated_at" SET DEFAULT (now() AT TIME ZONE 'utc'`);
        await queryRunner.query(`ALTER TABLE "conversion_rates_usd" ALTER COLUMN "created_at" SET DEFAULT (now() AT TIME ZONE 'utc'`);
        await queryRunner.query(`ALTER TABLE "category" ALTER COLUMN "updated_at" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "category" ALTER COLUMN "created_at" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "category" DROP COLUMN "name"`);
        await queryRunner.query(`ALTER TABLE "category" ADD "name" text NOT NULL`);
        await queryRunner.query(`ALTER TABLE "category" ADD CONSTRAINT "category_Entertainment_key" UNIQUE ("name")`);
        await queryRunner.query(`ALTER TABLE "category" ADD CONSTRAINT "category_10dd08f1-02e9-40fa-a483-a6a85b12a308_key" UNIQUE ("id")`);
        await queryRunner.query(`COMMENT ON COLUMN "category"."id" IS 'category ID'`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "category_id" SET DEFAULT uuid_generate_v4()`);
        await queryRunner.query(`ALTER TABLE "sub_category" DROP CONSTRAINT "UQ_4ec8c495300259f2322760a39fa"`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "category_id" SET NOT NULL`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "updated_at" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "created_at" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "sub_category" DROP COLUMN "name"`);
        await queryRunner.query(`ALTER TABLE "sub_category" ADD "name" text NOT NULL`);
        await queryRunner.query(`ALTER TABLE "sub_category" ALTER COLUMN "id" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "updated_at" SET DEFAULT (now() AT TIME ZONE 'utc'`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "created_at" SET DEFAULT (now() AT TIME ZONE 'utc'`);
        await queryRunner.query(`ALTER TABLE "expense" DROP COLUMN "image_url"`);
        await queryRunner.query(`ALTER TABLE "expense" ADD "image_url" text`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "sub_category_id" SET DEFAULT uuid_generate_v4()`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "category_id" SET DEFAULT uuid_generate_v4()`);
        await queryRunner.query(`ALTER TABLE "expense" DROP COLUMN "currency"`);
        await queryRunner.query(`ALTER TABLE "expense" ADD "currency" text NOT NULL`);
        await queryRunner.query(`ALTER TABLE "expense" DROP COLUMN "description"`);
        await queryRunner.query(`ALTER TABLE "expense" ADD "description" text NOT NULL`);
        await queryRunner.query(`ALTER TABLE "expense" ALTER COLUMN "user_id" SET DEFAULT auth.uid()`);
        await queryRunner.query(`ALTER TABLE "group" ALTER COLUMN "type_id" SET NOT NULL`);
        await queryRunner.query(`ALTER TABLE "group" DROP COLUMN "name"`);
        await queryRunner.query(`ALTER TABLE "group" ADD "name" text NOT NULL`);
        await queryRunner.query(`ALTER TABLE "group_types" ADD CONSTRAINT "group_types_group_type_name_key" UNIQUE ("name")`);
        await queryRunner.query(`COMMENT ON COLUMN "auth"."users"."is_sso_user" IS 'Auth: Set this column to true when the account comes from SSO. These accounts can have duplicate emails.'`);
        await queryRunner.query(`DELETE FROM "public"."typeorm_metadata" WHERE "type" = $1 AND "name" = $2 AND "database" = $3 AND "schema" = $4 AND "table" = $5`, ["GENERATED_COLUMN","confirmed_at","postgres","auth","users"]);
        await queryRunner.query(`ALTER TABLE "auth"."users" DROP COLUMN "confirmed_at"`);
        await queryRunner.query(`INSERT INTO "public"."typeorm_metadata"("database", "schema", "table", "type", "name", "value") VALUES ($1, $2, $3, $4, $5, $6)`, ["postgres","auth","users","GENERATED_COLUMN","confirmed_at",""]);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "confirmed_at" TIMESTAMP WITH TIME ZONE`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "phone" SET DEFAULT NULL`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD CONSTRAINT "users_phone_key" UNIQUE ("phone")`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "updated_at" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "created_at" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "is_super_admin" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ALTER COLUMN "id" DROP DEFAULT`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "reauthentication_sent_at" TIMESTAMP WITH TIME ZONE`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "email_change_token_current" character varying(255) DEFAULT ''`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "phone_change_sent_at" TIMESTAMP WITH TIME ZONE`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "phone_change_token" character varying(255) DEFAULT ''`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "phone_change" text DEFAULT ''`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "email_change_sent_at" TIMESTAMP WITH TIME ZONE`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "email_change" character varying(255)`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "email_change_token_new" character varying(255)`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "recovery_sent_at" TIMESTAMP WITH TIME ZONE`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "confirmation_sent_at" TIMESTAMP WITH TIME ZONE`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD "invited_at" TIMESTAMP WITH TIME ZONE`);
        await queryRunner.query(`DROP TABLE "group_expense_participant_entity"`);
        await queryRunner.query(`DROP TABLE "expense_split_entity"`);
        await queryRunner.query(`DROP TYPE "public"."expense_split_entity_settlementstatus_enum"`);
        await queryRunner.query(`DROP TYPE "public"."expense_split_entity_splittype_enum"`);
        await queryRunner.query(`DROP TABLE "payment_split_settlement_entity"`);
        await queryRunner.query(`DROP TABLE "payment_settlement_entity"`);
        await queryRunner.query(`ALTER TABLE "auth"."users" ADD CONSTRAINT "users_email_change_confirm_status_check" CHECK (((email_change_confirm_status >= 0) AND (email_change_confirm_status <= 2)))`);
        await queryRunner.query(`CREATE UNIQUE INDEX "email_change_token_new_idx" ON "auth"."users" ("email_change_token_new") WHERE ((email_change_token_new)::text !~ '^[0-9 ]*$'::text)`);
        await queryRunner.query(`CREATE UNIQUE INDEX "email_change_token_current_idx" ON "auth"."users" ("email_change_token_current") WHERE ((email_change_token_current)::text !~ '^[0-9 ]*$'::text)`);
        await queryRunner.query(`ALTER TABLE "user_groups" ADD CONSTRAINT "user_groups_user_id_fkey" FOREIGN KEY ("user_id") REFERENCES "auth"."users"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "user_groups" ADD CONSTRAINT "user_groups_group_id_fkey" FOREIGN KEY ("group_id") REFERENCES "group"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "sub_category" ADD CONSTRAINT "sub_category_category_id_fkey" FOREIGN KEY ("category_id") REFERENCES "category"("id") ON DELETE RESTRICT ON UPDATE CASCADE`);
        await queryRunner.query(`ALTER TABLE "expense" ADD CONSTRAINT "expense_user_id_fkey" FOREIGN KEY ("user_id") REFERENCES "auth"."users"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "expense" ADD CONSTRAINT "expense_sub_category_id_fkey" FOREIGN KEY ("sub_category_id") REFERENCES "sub_category"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "expense" ADD CONSTRAINT "expense_group_id_fkey" FOREIGN KEY ("group_id") REFERENCES "group"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "expense" ADD CONSTRAINT "expense_category_id_fkey" FOREIGN KEY ("category_id") REFERENCES "category"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "group" ADD CONSTRAINT "group_type_id_fkey" FOREIGN KEY ("type_id") REFERENCES "group_types"("id") ON DELETE RESTRICT ON UPDATE CASCADE`);
    }
}
